@@ -2,6 +2,10 @@
 Changes with Apache 2.3.2
 [ When backported to 2.2.x, remove entry from this file ]
 
+  *) mod_deflate: Fix creation of invalid Etag headers. We now make sure
+     that the Etag value is properly quoted when adding the gzip marker.
+     PR 39727. [Lars Eilebrecht]
+
   *) Added 20x22 icons for ODF, SVG, and XML documents.  PR 37185.
      [Peter Harlow]
 
